--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
-.App {
+.center {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background: black !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.title {
+  margin-top: 10vh;
+  font-size: 3vh;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#password {
+  margin-top: 2vh;
+  display: flex;
+  align-content: center;
+  text-align: center;
+  font-size: 10vh;
+  padding: 0vh;
+  color: white;
+  background: rgba(128, 128, 128, 0.1);
+  width: 50vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+@media (max-width: 1024px) {
+  #password {
+    font-size: 7.5vh;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 768px) {
+  #password {
+    font-size: 3.5vh;
   }
+}
+
+@media (max-width: 425px) {
+  #password {
+    font-size: 2vh;
+  }
+}
+
+
+@media (max-width:375px) {
+  #password {
+    font-size: 1.5vh;
+  }
+}
+
+.guess {
+  display: flex;
+  width: 50vw;
+  margin: auto;
+}
+
+.score {
+  display: flex;
+  width: 50vw;
+  margin: auto;
+  background: rgba(128, 128, 128, 0.1) !important;
+}
+
+.warning {
+  display: flex;
+  width: 50vw; 
+  margin: auto;
+}
+
+.issue {
+  display: flex;
+  width: 50vw;
+  margin: auto;
+}
+
+.time {
+  display: flex;
+  width: 50vw;
+  margin: auto;
+}
+
+.pattern {
+  display: flex;
+  width: 50vw;
+  margin: auto;
+  flex-direction: column;
+}
+
+
+
+.ui.progress {
+  margin: 2vh auto !important;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: purple;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: rgba(255, 255, 255, 0.1);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: rgba(255, 255, 255, 0.1);
+}
+
+.ui.input {
+  display: flex;
+  align-content: center;
+  margin: auto;
+}
+
+.ui.input>input {
+  padding: inherit;
+  line-height: inherit;
+  background: black;
+  
+}
+
+.atlas {
+  align-content: center;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
 }
